未提供光标跟随数据的Framework兼容，ServedViewBound空指针判断

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,13 @@ android {
 
     buildTypes {
         debug {
-            signingConfig signingConfigs.aoc
+            signingConfig signingConfigs.php
         }
 
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.aoc
+            signingConfig signingConfigs.php
         }
     }
     externalNativeBuild {
